// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init options defaults 1`] = `
Array [
  Array [
    "foo",
  ],
  Array [
    "lorem",
  ],
]
`;

exports[`init options schema should invalidate empty options 1`] = `false`;

exports[`init options schema should invalidate empty options 2`] = `
Array [
  "\\"ignore[0]\\" is not allowed to be empty",
  "\\"extensions.txt.concurrency\\" must be greater than or equal to 1",
  "\\"extensions.txt.strategy\\" must be one of [steps, parallel]",
  "\\"extensions.txt.strategy\\" is not allowed to be empty",
  "\\"defaultStrategy\\" must be one of [steps, parallel]",
  "\\"defaultStrategy\\" is not allowed to be empty",
  "\\"defaultConcurrency\\" must be greater than or equal to 1",
]
`;

exports[`init options schema should invalidate invalid options 1`] = `false`;

exports[`init options schema should invalidate invalid options 2`] = `
Array [
  "\\"events.on.load\\" is not allowed",
  "\\"events.html.content\\" is not allowed",
  "\\"events.txt.parse\\" is not allowed",
  "\\"extensions.txt.concurrency\\" must be greater than or equal to 1",
  "\\"extensions.txt.strategy\\" must be one of [steps, parallel]",
  "\\"defaultStrategy\\" must be one of [steps, parallel]",
  "\\"defaultConcurrency\\" must be greater than or equal to 1",
]
`;

exports[`init options schema should invalidate invalid tasks options 1`] = `false`;

exports[`init options schema should invalidate invalid tasks options 2`] = `
Array [
  "\\"foo.bar\\" must be a string",
  "\\"lorem\\" must be of type object",
]
`;

exports[`init options schema should invalidate options with incorrect data types 1`] = `false`;

exports[`init options schema should invalidate options with incorrect data types 2`] = `
Array [
  "\\"enabled\\" must be a boolean",
  "\\"report\\" must be a boolean",
  "\\"ignore\\" must be an array",
  "\\"events.on.bootstrap\\" must be of type function",
  "\\"events.html.parse\\" must be of type function",
  "\\"events.foo\\" must be of type object",
  "\\"events.txt.content\\" must be of type function",
  "\\"extensions.foo\\" must be of type object",
  "\\"extensions.txt.concurrency\\" must be a number",
  "\\"extensions.txt.strategy\\" must be one of [steps, parallel]",
  "\\"extensions.txt.strategy\\" must be a string",
  "\\"defaultStrategy\\" must be one of [steps, parallel]",
  "\\"defaultStrategy\\" must be a string",
  "\\"defaultConcurrency\\" must be a number",
]
`;

exports[`init options schema should invalidate unknown options 1`] = `false`;

exports[`init options schema should invalidate unknown options 2`] = `
Array [
  "\\"unknown\\" is not allowed",
  "\\"invalid\\" is not allowed",
]
`;

exports[`init options schema should validate correct options 1`] = `true`;

exports[`init options schema should validate correct options 2`] = `Array []`;

exports[`init options schema should validate correct tasks options 1`] = `true`;

exports[`init options schema should validate correct tasks options 2`] = `Array []`;

exports[`init options schema should validate default options 1`] = `true`;

exports[`init options schema should validate default options 2`] = `Array []`;

exports[`run correctly ignores writing report file 1`] = `Array []`;

exports[`run correctly runs mixed strats 1`] = `
Array [
  Array [
    "Loaded 1/4 Processed 0/4 Wrote 0/4",
  ],
  Array [
    "Loaded 2/4 Processed 0/4 Wrote 0/4",
  ],
  Array [
    "Loaded 2/4 Processed 1/4 Wrote 0/4",
  ],
  Array [
    "Loaded 2/4 Processed 2/4 Wrote 0/4",
  ],
  Array [
    "Loaded 2/4 Processed 2/4 Wrote 1/4",
  ],
  Array [
    "Loaded 2/4 Processed 2/4 Wrote 2/4",
  ],
  Array [
    "Loaded 3/4 Processed 2/4 Wrote 2/4",
  ],
  Array [
    "Loaded 3/4 Processed 3/4 Wrote 2/4",
  ],
  Array [
    "Loaded 3/4 Processed 3/4 Wrote 3/4",
  ],
  Array [
    "Loaded 4/4 Processed 3/4 Wrote 3/4",
  ],
  Array [
    "Loaded 4/4 Processed 4/4 Wrote 3/4",
  ],
  Array [
    "Loaded 4/4 Processed 4/4 Wrote 4/4",
  ],
  Array [
    "Done processing 4 files saving a total of 5",
  ],
]
`;

exports[`run correctly runs parallel strat 1`] = `
Array [
  Array [
    "Loaded 1/4 Processed 0/4 Wrote 0/4",
  ],
  Array [
    "Loaded 1/4 Processed 1/4 Wrote 0/4",
  ],
  Array [
    "Loaded 1/4 Processed 1/4 Wrote 1/4",
  ],
  Array [
    "Loaded 2/4 Processed 1/4 Wrote 1/4",
  ],
  Array [
    "Loaded 2/4 Processed 2/4 Wrote 1/4",
  ],
  Array [
    "Loaded 2/4 Processed 2/4 Wrote 2/4",
  ],
  Array [
    "Loaded 3/4 Processed 2/4 Wrote 2/4",
  ],
  Array [
    "Loaded 3/4 Processed 3/4 Wrote 2/4",
  ],
  Array [
    "Loaded 3/4 Processed 3/4 Wrote 3/4",
  ],
  Array [
    "Loaded 4/4 Processed 3/4 Wrote 3/4",
  ],
  Array [
    "Loaded 4/4 Processed 4/4 Wrote 3/4",
  ],
  Array [
    "Loaded 4/4 Processed 4/4 Wrote 4/4",
  ],
  Array [
    "Done processing 4 files saving a total of 5",
  ],
]
`;

exports[`run correctly runs steps strat 1`] = `
Array [
  Array [
    "Loaded 1/4 Processed 0/4 Wrote 0/4",
  ],
  Array [
    "Loaded 2/4 Processed 0/4 Wrote 0/4",
  ],
  Array [
    "Loaded 2/4 Processed 1/4 Wrote 0/4",
  ],
  Array [
    "Loaded 2/4 Processed 2/4 Wrote 0/4",
  ],
  Array [
    "Loaded 2/4 Processed 2/4 Wrote 1/4",
  ],
  Array [
    "Loaded 2/4 Processed 2/4 Wrote 2/4",
  ],
  Array [
    "Loaded 3/4 Processed 2/4 Wrote 2/4",
  ],
  Array [
    "Loaded 4/4 Processed 2/4 Wrote 2/4",
  ],
  Array [
    "Loaded 4/4 Processed 3/4 Wrote 2/4",
  ],
  Array [
    "Loaded 4/4 Processed 4/4 Wrote 2/4",
  ],
  Array [
    "Loaded 4/4 Processed 4/4 Wrote 3/4",
  ],
  Array [
    "Loaded 4/4 Processed 4/4 Wrote 4/4",
  ],
  Array [
    "Done processing 4 files saving a total of 5",
  ],
]
`;

exports[`run correctly writes report file 1`] = `
Array [
  Array [
    "postbuild.log.json",
    "[
  \\"report1\\",
  \\"report2\\"
]",
  ],
]
`;
